[package]
name = "scaleservers-uuid"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/scaleservers/scaleservers-uuid-lib-rs"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
]